# markowitz-portfolio-optimizer

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  portfolio.json  pyproject.toml  tsconfig.json  vercel.json
api/: index.py
src/app/: globals.css  layout.tsx  page.tsx
src/features/: portfolio-lab.tsx
src/lib/: portfolio.ts
src/portfolio_optimizer/: __init__.py  cli.py  optimizer.py
src/test/: portfolio.test.ts
tests/: test_api.py  test_optimizer.py
