[build-system]
requires=["setuptools>=69"]
build-backend="setuptools.build_meta"
[project]
name="markowitz-portfolio-optimizer"
version="0.1.0"
requires-python=">=3.12"
dependencies=["numpy>=2,<3","pandas>=2.2,<3","scipy>=1.14,<2","yfinance>=0.2.50,<1","plotly>=5.24,<6","fastapi>=0.116,<1","pydantic>=2.11,<3"]
[project.scripts]
portfolio-optimizer="portfolio_optimizer.cli:main"
[tool.setuptools.packages.find]
where=["src"]
[tool.pytest.ini_options]
pythonpath=["src"]
[tool.ruff]
line-length=100
[tool.ruff.lint]
ignore=["E701","E702","E731"]
